@@ -3,4 +3,7 @@ string collation inequality works
 regular expressions operator works
 single negations on regular expressions work
 double negations on regular expressions work
+text subtraction test (on strings) is not yet ready
+text subtraction test (on variables) is fine
+text subtraction test (on variables) is fine
 string test success
